# ComfyUI-AF-Pack-Prompt-Nodes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  nodes.py  package.json  pyproject.toml
Docs/example_workflows/: AF-Edit_Generated_Prompt.json  AF-Save_and_Load_Prompt_History.json
Prompt-History/: Prompt-History.json
web/: AF_Edit_Generated_Prompt.js  AF_Load_Prompt_History.js  AF_Model_Switch.js
