[project]
name = "comfyui-af-pack-prompt-nodes"
description = "A lightweight suite of ComfyUI custom nodes for AI prompt management and history tracking."
version = "1.0.7"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/alFrame/ComfyUI-AF-Pack-Prompt-Nodes"

[tool.comfy]
PublisherId = "alframe"
DisplayName = "ComfyUI AF - Pack-Prompt-Nodes"
Icon = "https://fullframestudios.ch/ComfyUI-Icon/icon.png"